--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to not working lol <%= title %></p>
+    <p>Welcome to not working lol lul das neue klappt auch <%= title %></p>
   </body>
 </html>
